# ent/migrate/schema.go
@@ -309,6 +309,7 @@ var (
 		{Name: "trigger_source_event_id", Type: field.TypeString, Nullable: true},
 		{Name: "war_room", Type: field.TypeJSON, Nullable: true},
 		{Name: "resolved_at", Type: field.TypeTime, Nullable: true},
+		{Name: "postmortem_skipped", Type: field.TypeBool, Default: false},
 		{Name: "acked_at", Type: field.TypeTime, Nullable: true},
 		{Name: "closed_at", Type: field.TypeTime, Nullable: true},
 		{Name: "embedding", Type: field.TypeOther, Nullable: true, SchemaType: map[string]string{"postgres": "vector(1536)", "sqlite3": "blob"}},
@@ -327,25 +328,25 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:     "incidents_escalation_policies_incidents",
-				Columns:    []*schema.Column{IncidentsColumns[19]},
+				Columns:    []*schema.Column{IncidentsColumns[20]},
 				RefColumns: []*schema.Column{EscalationPoliciesColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:     "incidents_users_assignee",
-				Columns:    []*schema.Column{IncidentsColumns[20]},
+				Columns:    []*schema.Column{IncidentsColumns[21]},
 				RefColumns: []*schema.Column{UsersColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:     "incidents_services_incidents",
-				Columns:    []*schema.Column{IncidentsColumns[21]},
+				Columns:    []*schema.Column{IncidentsColumns[22]},
 				RefColumns: []*schema.Column{ServicesColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:     "incidents_teams_incidents",
-				Columns:    []*schema.Column{IncidentsColumns[22]},
+				Columns:    []*schema.Column{IncidentsColumns[23]},
 				RefColumns: []*schema.Column{TeamsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
@@ -359,12 +360,12 @@ var (
 			{
 				Name:    "incident_team_incidents",
 				Unique:  false,
-				Columns: []*schema.Column{IncidentsColumns[22]},
+				Columns: []*schema.Column{IncidentsColumns[23]},
 			},
 			{
 				Name:    "incident_service_incidents",
 				Unique:  false,
-				Columns: []*schema.Column{IncidentsColumns[21]},
+				Columns: []*schema.Column{IncidentsColumns[22]},
 			},
 			{
 				Name:    "incident_resolved_at",
